# gobang

./: CMakeLists.txt  mk.sh  readme
src/: main.cpp
